Fixed bugs for the NormIDAPro class

--- a/ext_env.config
+++ b/ext_env.config
@@ -1,10 +1,10 @@
-__errno_location	RAX=fresh heap pointer
-__libc_start_main	0 <= RDI <= 15
-__libc_start_main	RSI=fresh heap pointer
-optind			0 < RAX <= 14
-strndup		RAX=fresh heap pointer
-strlen			0 <= RAX <= 100
-strlen			RSI=unchanged
-starting_point		0 < RDI <= 6
+__errno_location	EAX=fresh heap pointer
+__libc_start_main	0 <= EDI <= 15
+__libc_start_main	ESI=fresh heap pointer
+optind			0 < EAX <= 14
+strndup		EAX=fresh heap pointer
+strlen			0 <= EAX <= 100
+strlen			ESI=unchanged
+starting_point		0 < EDI <= 6
 
 
